make button submit type, ensure full sized date picker on mobile devices

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -64,6 +64,7 @@ button {
     vertical-align: middle;
 }
 
+/* Containers */
 .DU-logo {
     width: 35%;
     max-width: 300px;
@@ -104,6 +105,37 @@ button {
     margin: 0%;
 }
 
+.date-picker {
+    /* Ensures full sized date picker on mobile devices */
+    width: 500px;
+}
+
+.submit-text {
+    color: #FFF;
+    vertical-align: middle;
+    padding: 0;
+    display: block;
+}
+
+.scroll-box {
+    background-color: rgba(0, 0, 0, 0.3);
+    color: #FFF;
+    padding: 0.5em;
+    width: 100%;
+    height: 20em;
+    margin: 1% 0% 4%;
+    overflow-y: scroll;
+    p {
+        text-align: left;
+    }
+}
+
+.alert {
+    width: 100%;
+    text-shadow: none;
+}
+
+/* Buttons */
 .wood-btn {
     background: url('/images/btn-background.png') no-repeat;
     background-size: 100% 100%;
@@ -131,29 +163,8 @@ button {
     padding: 2% 18%;
 }
 
-.submit-text {
-    color: #FFF;
-    vertical-align: middle;
-    padding: 0;
-    display: block;
-}
-
-.scroll-box {
-    background-color: rgba(0, 0, 0, 0.3);
-    color: #FFF;
-    padding: 0.5em;
-    width: 100%;
-    height: 20em;
-    margin: 5% 0% 4%;
-    overflow-y: scroll;
-    #terms-btn {
-        right: 0px;
-    }
-}
-
-.alert {
-    width: 100%;
-    text-shadow: none;
+#terms-btn {
+    right: 0px;
 }
 
 /** Form validation **/
@@ -198,6 +209,7 @@ button {
   opacity:1;
 }
 
+/* Media Queries */
 @media screen and (min-height: 906px) {
     .legal {
         position: fixed;
